fix image list has extra padding on left

--- a/assets/_add_product_page.sass
+++ b/assets/_add_product_page.sass
@@ -71,6 +71,7 @@
 
 .image-vertical-list
 	@extend .clearfix
+	padding-left: 0
 
 	.list-item, .list-section-break
 		display: block
